--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -45,3 +45,6 @@ jobs:
           # 这是文档部署到的分支名称
           branch: gh-pages
           folder: src/.vuepress/dist
+        env:
+          # 引用您在 GitHub Secrets 中存储的 PAT
+          ACCESS_TOKEN: ${{ secrets.VUEPRESS_TOKEN }}
