--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "docs:update-package": "pnpm dlx vp-update"
   },
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.61",
-    "vue": "^3.2.47",
-    "vuepress": "2.0.0-beta.61",
-    "vuepress-plugin-auto-catalog": "2.0.0-beta.207",
-    "vuepress-theme-hope": "2.0.0-beta.206"
+    "@vuepress/client": "2.0.0-beta.62",
+    "vue": "^3.3.4",
+    "vuepress": "2.0.0-beta.62",
+    "vuepress-plugin-auto-catalog": "2.0.0-beta.219",
+    "vuepress-theme-hope": "2.0.0-beta.219"
   },
   "dependencies": {
-    "@vuepress/utils": "2.0.0-alpha.1"
+    "@vuepress/utils": "2.0.0-beta.62"
   }
 }
