--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -50,4 +50,4 @@ jobs:
           branch: gh-pages
           folder: src/.vuepress/dist
           # 引用您在 GitHub Secrets 中存储的 PAT
-          token: ${{ secrets.VUEPRESS_TOKEN }}
+          # token: ${{ secrets.VUEPRESS_TOKEN }}
